src/objects/sma__MAExportRow__c.object
<CustomObject>
    <fields>
        <fullName>sma__Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Latitude__c</fullName>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Longitude__c</fullName>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MAExport__c</fullName>
        <label>MapAnything Export</label>
        <referenceTo>sma__MAExport__c</referenceTo>
        <relationshipLabel>MapAnything Export Rows</relationshipLabel>
        <relationshipName>MapAnything_Export_Rows</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sma__ObjectType__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__RecordId__c</fullName>
        <label>RecordId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__SavedQueryName__c</fullName>
        <label>Saved Query Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Tooltip10__c</fullName>
        <label>Map Tooltip Ten</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Tooltip11__c</fullName>
        <label>Map Tooltip Eleven</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Tooltip12__c</fullName>
        <label>Map Tooltip Twelve</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Zip__c</fullName>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MapAnything Export Row</label>
    <listViews>
        <fullName>sma__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Export Row</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MapAnything Export Rows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>